[add]locate
