# controllers/location/index.js
@@ -1,0 +1,22 @@
+const express = require("express");
+
+module.exports = (models) => {
+  /**
+   * Controller Logic
+   */
+
+  const getLocation = (req, res) =>
+    models.locate
+      .get({ country_name: req.params.name })
+      .then((messages) => messages.map((msg) => msg.serialize()))
+      .then((messages) => res.status(200).json(messages))
+      .catch((err) => res.status(400).send(err.message));
+
+  /**
+   * Routes
+   */
+  const router = express.Router();
+  router.get("/name/:name", getLocation);
+
+  return router;
+};
