# models/index.js
@@ -1,0 +1,5 @@
+module.exports = function(knex) {
+  return {
+    locate: require("./location")(knex),
+  };
+};
